hphp/hack/test/ifc/check/conditional_exprs.php.exp
=== IFC analysis results for conditional_exprs.php
File "conditional_exprs.php", line 35, characters 3-22:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
  File "conditional_exprs.php", line 12, characters 3-15:
  Another program point contributing to the illegal flow
File "conditional_exprs.php", line 40, characters 3-25:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
  File "conditional_exprs.php", line 12, characters 3-15:
  Another program point contributing to the illegal flow
File "conditional_exprs.php", line 45, characters 3-27:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
File "conditional_exprs.php", line 50, characters 3-28:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
File "conditional_exprs.php", line 55, characters 3-31:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
File "conditional_exprs.php", line 60, characters 3-31:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "conditional_exprs.php", line 7, characters 15-22:
  This may be the data source with policy `PRIVATE`
  File "conditional_exprs.php", line 5, characters 15-22:
  This may be the data sink with policy `PUBLIC`
